<resources>
    <string name="app_name">JavaClass</string>
    <string name="project_2">Project 2</string>
    <string name="project_3">Project 3</string>
    <string name="project_4">Project 4</string>
    <string name="title_activity_project_three">ProjectThreeActivity</string>
    <string name="title_activity_project_two">ProjectTwoActivity</string>
    <string name="customer">Customer</string>
    <string name="employee">Employee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="customer_number">Customer Number</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="create_new_employee_title">Create New Employee</string>
    <string name="create_new_customer_title">Enter New Customer</string>
    <string name="value_label">Value:</string>
    <string name="convert_button_text">Convert</string>
    <string name="process_output_label">Process:</string>
    <string name="binary_to_decimal">Binary to Decimal</string>
    <string name="decimal_to_hexadecimal">Decimal to Hex</string>
    <string name="decimal_to_binary">Decimal to Binary</string>
    <string name="result_label">Result:</string>
    <string name="clear">Clear</string>
</resources>
