<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.stlcc.jasonmayer.javaclass.activity.ProjectThreeActivity"
    tools:showIn="@layout/activity_project_three">

        <RadioGroup
            android:id="@+id/type_selector"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <RadioButton
                android:id="@+id/binary_to_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binary_to_decimal"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/decimal_to_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_to_binary"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/decimal_to_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_to_hexadecimal"
                android:textSize="12sp" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/type_selector"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout4">
        <EditText
            android:id="@+id/value_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/value_label"
            />
        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_button_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/process_output_label" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="300dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label" />

        <EditText
            android:id="@+id/result_output"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
